objects/Security__c.object
<CustomObject>
    <fields>
        <fullName>AssetType__c</fullName>
        <description>Artemus.security.asset_type
varchar(100)</description>
        <label>Asset Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Artemus.security.cntry_id
varchar(255)</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Aland Islandsii</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Netherlands Antilles</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>French Southern Territories</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cusip__c</fullName>
        <description>Artemus.security.cusip
varchar(255)</description>
        <label>Cusip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <description>Artemus.security.exch_id
varchar(255)</description>
        <label>Exchange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InceptionDate__c</fullName>
        <description>Artemus.security.inception
date</description>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Isin__c</fullName>
        <description>Artemus.security.isin_code
varchar(255)</description>
        <label>Isin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarCategory__c</fullName>
        <description>Artemus.security.morningstar_category
varchar(255)</description>
        <label>Morningstar Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarCode__c</fullName>
        <externalId>true</externalId>
        <label>Morningstar Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PrimaryProspectBench__c</fullName>
        <description>Artemus.security.primary_prospect_bench
varchar(255)</description>
        <label>Primary Prospect Bench</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecType__c</fullName>
        <description>Artemus.security.sec_type_id
varchar(255)</description>
        <label>Sec Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open-End Fund</fullName>
                </value>
                <value>
                    <fullName>Exchange-Traded Fund</fullName>
                </value>
                <value>
                    <fullName>Closed-End Fund</fullName>
                </value>
                <value>
                    <fullName>Money Market Fund</fullName>
                </value>
                <value>
                    <fullName>Offshore Fund</fullName>
                </value>
                <value>
                    <fullName>Common Stock</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Category Average</fullName>
                </value>
                <value>
                    <fullName>Preferred Stock</fullName>
                </value>
                <value>
                    <fullName>Separate Account</fullName>
                </value>
                <value>
                    <fullName>Collective Investment Trust</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sedol__c</fullName>
        <description>Artemus.security.sedol
varchar(255)</description>
        <label>Sedol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Artemus.security.is_active
int</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticker__c</fullName>
        <description>Artemus.security.ticker
varchar(255)</description>
        <label>Ticker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Security</label>
    <nameField>
        <label>Security Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Securities</fullName>
        <columns>NAME</columns>
        <columns>Ticker__c</columns>
        <columns>Exchange__c</columns>
        <columns>SecType__c</columns>
        <columns>MorningstarCategory__c</columns>
        <columns>MorningstarCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Securities</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AssetType__c</columns>
        <columns>Country__c</columns>
        <columns>Cusip__c</columns>
        <columns>Status__c</columns>
        <columns>MorningstarCategory__c</columns>
        <columns>MorningstarCode__c</columns>
        <columns>PrimaryProspectBench__c</columns>
        <columns>Exchange__c</columns>
        <columns>InceptionDate__c</columns>
        <columns>Isin__c</columns>
        <columns>SecType__c</columns>
        <columns>Sedol__c</columns>
        <columns>Ticker__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>